# fyles

./: .env.prod.example  .gitignore  Caddyfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup-vps.sh  start.sh
.claude/: settings.local.json
api/: Dockerfile  auth.py  cli.py  config.py  main.py  requirements.txt  seed.py  storage.py
api/models/: dossier.py  organization.py  user.py  workflow.py
api/routers/: auth.py  dashboard.py  dossiers.py  settings.py  workflow_execution.py  workflows.py
data/: ~$submission.xlsx
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: InstructionWorkflowBuilder.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  ConfirmModal.tsx  LoadingSpinner.tsx
frontend/src/data/: mockData.ts
frontend/src/lib/: api.ts  auth.ts  useApi.ts  uuid.ts
frontend/src/pages/: AIEngine.tsx  Dashboard.tsx  Documents.tsx  DossierDetail.tsx  DossiersList.tsx  FormPreview.tsx  Login.tsx  Settings.tsx  WorkflowDetail.tsx  WorkflowsList.tsx
frontend/src/types/: index.ts
