[project]
name = "fyles"
version = "0.1.0"
description = ""
authors = [
    {name = "avraux",email = "94382539+avraux@users.noreply.github.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyyaml>=6.0,<7.0",
    "pandas (>=3.0.1,<4.0.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
    "fastapi (>=0.115)",
    "uvicorn[standard] (>=0.30)",
    "motor (>=3.5)",
    "beanie (>=1.27)",
    "python-dotenv (>=1.0)",
    "pydantic-settings (>=2.0)",
    "minio (>=7.2.20,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
